--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "bundle": "rm -rf dist && parcel build index.html --no-source-maps --public-url '.' && npm run compile-sprites && && zip -r bundle.zip dist",
+    "build": "rm -rf dist && parcel build index.html --no-source-maps --public-url '.' && npm run compile-sprites",
+    "zip": "zip -r bundle.zip dist",
     "compile-sprites": "spritesheet-js sprites/*.png -f pixi.js -p dist/"
   },
   "devDependencies": {
